--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -37,7 +37,12 @@ jobs:
       - name: Run scraper
         run: |
           cd scraper
-          python scrape.py
+          python scrape.py || {
+            echo "⚠️  Standard scraper failed (likely 403 Forbidden)"
+            echo "The site may require JavaScript rendering or have anti-bot protection."
+            echo "Consider using scrape_selenium.py or manual data entry."
+            exit 1
+          }
       
       - name: Check for changes
         id: verify-changed-files
